# learnsciml

./: .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: build-test.yml  pypi.yml
learnsciml/: __init__.py
learnsciml/data/: __init__.py  generators.py  loaders.py  noise.py  sequences.py
learnsciml/metrics/: __init__.py
learnsciml/models/: __init__.py  base.py  polynomial.py
learnsciml/utils/: __init__.py
learnsciml/viz/: __init__.py
tests/: test_basic.py
